// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemRightContent should align where we specify 1`] = `
<div
  className="List__ListItemWrapper-s15prkdz-1  ListItemWrapper item__list__item offline cBksjG"
>
  <div
    className="List__ItemAvatar-s15prkdz-2 ItemAvatar avatar__outer__wrapper drZDDa"
    onClick={undefined}
  >
    <div
      className="empty Avatar-dlsm6o-0 avatar__wrapper online huKfZt"
    />
  </div>
  <div
    className="List__ItemDetail-s15prkdz-3 ItemDetail item__details gwpIUt"
    onClick={undefined}
  />
</div>
`;

exports[`List render send padding-bottom if its piled 1`] = `
<div
  className="List-s15prkdz-0 List item__list ibmscV"
/>
`;

exports[`List renders 1`] = `
<div
  className="List-s15prkdz-0 List item__list bkLHAA"
/>
`;

exports[`List should render ItemRightContent with a title 1`] = `
<div
  className="List-s15prkdz-0 List item__list bkLHAA"
>
  <div>
    <div
      className="List__ListItemWrapper-s15prkdz-1  ListItemWrapper item__list__item offline cBksjG"
    >
      <div
        className="List__ItemDetail-s15prkdz-3 ItemDetail item__details gwpIUt"
        onClick={undefined}
      >
        <div
          className="List__ItemSubTitle-s15prkdz-6 ItemSubTitle sub__title jrzuey"
        >
          bar
        </div>
      </div>
      <div
        className="List__ItemRightContent-s15prkdz-4 ItemRightContent content__right fgoBzY"
      >
        <div
          className="List__ItemTitle-s15prkdz-5 ItemTitle title hyqSCK"
        >
          foo
        </div>
      </div>
    </div>
    <a>
      Im also a list item
    </a>
  </div>
</div>
`;

exports[`List should render listitems and divs 1`] = `
<div
  className="List-s15prkdz-0 List item__list bkLHAA"
>
  <div>
    <div
      className="List__ListItemWrapper-s15prkdz-1  ListItemWrapper item__list__item offline cBksjG"
    >
      <div
        className="List__ItemDetail-s15prkdz-3 ItemDetail item__details gwpIUt"
        onClick={undefined}
      >
        <div
          className="List__ItemTitle-s15prkdz-5 ItemTitle title igNLlm"
          overflow={undefined}
          width={undefined}
        >
          foo
        </div>
        <div
          className="List__ItemSubTitle-s15prkdz-6 ItemSubTitle sub__title jrzuey"
        >
          bar
        </div>
      </div>
    </div>
    <a>
      Im also a list item
    </a>
  </div>
</div>
`;

exports[`List should render subTitle 1`] = `
<div
  className="List-s15prkdz-0 List item__list bkLHAA"
>
  <div
    className="List__ListItemWrapper-s15prkdz-1  ListItemWrapper item__list__item offline cBksjG"
  >
    <div
      className="List__ItemDetail-s15prkdz-3 ItemDetail item__details gwpIUt"
      onClick={undefined}
    >
      <div
        className="List__ItemTitle-s15prkdz-5 ItemTitle title igNLlm"
        overflow={undefined}
        width={undefined}
      >
        foo
      </div>
      <div
        className="List__ItemSubTitle-s15prkdz-6 ItemSubTitle sub__title jrzuey"
      >
        bar
      </div>
    </div>
  </div>
</div>
`;

exports[`List should render title 1`] = `
<div
  className="List-s15prkdz-0 List item__list bkLHAA"
>
  <div
    className="List__ListItemWrapper-s15prkdz-1  ListItemWrapper item__list__item offline cBksjG"
  >
    <div
      className="List__ItemDetail-s15prkdz-3 ItemDetail item__details gwpIUt"
      onClick={undefined}
    >
      <div
        className="List__ItemTitle-s15prkdz-5 ItemTitle title igNLlm"
        overflow={undefined}
        width={undefined}
      >
        foo
      </div>
    </div>
  </div>
</div>
`;

exports[`ListItem renders 1`] = `
<div
  className="List__ListItemWrapper-s15prkdz-1  ListItemWrapper item__list__item offline cBksjG"
>
  <div
    className="List__ItemDetail-s15prkdz-3 ItemDetail item__details gwpIUt"
    onClick={undefined}
  />
</div>
`;

exports[`ListItem should align items 1`] = `
<div
  className="List__ListItemWrapper-s15prkdz-1  ListItemWrapper item__list__item offline cBksjG"
>
  <div
    className="List__ItemDetail-s15prkdz-3 ItemDetail item__details gwpIUt"
    onClick={undefined}
  />
</div>
`;

exports[`ListItem should render non-arrays 1`] = `
<div
  className="List__ListItemWrapper-s15prkdz-1  ListItemWrapper item__list__item offline cBksjG"
>
  <div
    className="List__ItemDetail-s15prkdz-3 ItemDetail item__details gwpIUt"
    onClick={undefined}
  >
    YOLO
  </div>
</div>
`;

exports[`ListItemAvatar should align where we specify 1`] = `
<div
  className="List__ListItemWrapper-s15prkdz-1  ListItemWrapper item__list__item offline cBksjG"
>
  <div
    className="List__ItemAvatar-s15prkdz-2 ItemAvatar avatar__outer__wrapper drZDDa"
    onClick={undefined}
  >
    <div
      className="empty Avatar-dlsm6o-0 avatar__wrapper online huKfZt"
    />
  </div>
  <div
    className="List__ItemDetail-s15prkdz-3 ItemDetail item__details gwpIUt"
    onClick={undefined}
  />
</div>
`;
